baml_language/crates/baml_tests/snapshots/compiles/testset_with_setup/baml_tests__compiles__testset_with_setup__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 34251
---
=== PPIR ===
function user.$init_test_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test_set("with shared setup", (testset: testing.TestCollector) -> void { { let base_url = "https://api.examp..."; let timeout = 5000; testset.register_test("uses setup vars", () -> { { assert.not_null(base_url) } assert.equal(timeout, 5000) }, null); testset.register_test("also uses setup", () -> { {  } assert.contains(base_url, "example") }, null) } null }, null) } null
}

--- captures ---
lambda () in ?: captures [base_url, timeout]
lambda () in ?: captures [base_url]
