baml_language/crates/baml_tests/snapshots/compiles/testset_with_setup/baml_tests__compiles__testset_with_setup__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.$init_test_28(registry: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // registry // param
    let _2: void
    let _3: (testing.TestCollector) -> void throws unknown

    bb0: {
        _3 = make_closure lambda[0]();
        _2 = call const fn testing.TestCollector.register_test_set(copy _1, const "with shared setup", copy _3, const null) -> [bb1];
    }

    bb1: {
        _0 = const null;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda($init_test_28, 0)>(testset: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // testset // param
    let _2: string // base_url [captured]
    let _3: int // timeout [captured]
    let _4: void
    let _5: () -> void throws unknown
    let _6: void
    let _7: () -> void throws unknown

    bb0: {
        _2 = const "https://api.example.com";
        _3 = const 5000_i64;
        _5 = make_closure lambda[0](copy _2, copy _3);
        _4 = call const fn testing.TestCollector.register_test(copy _1, const "uses setup vars", copy _5, const null) -> [bb1];
    }

    bb1: {
        _7 = make_closure lambda[1](copy _2);
        _6 = call const fn testing.TestCollector.register_test(copy _1, const "also uses setup", copy _7, const null) -> [bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

// lambda[0]
fn .<lambda(<lambda($init_test_28, 0)>, 1)>() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: null
    let _2: string
    let _3: int

    bb0: {
        _2 = copy capture[0];
        _1 = call const fn assert.not_null(copy _2) -> [bb1];
    }

    bb1: {
        _3 = copy capture[1];
        _0 = call const fn assert.equal(copy _3, const 5000_i64) -> [bb2];
    }

    bb2: {
        return;
    }
}

// lambda[1]
fn .<lambda(<lambda($init_test_28, 0)>, 2)>() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: string

    bb0: {
        _1 = copy capture[0];
        _0 = call const fn assert.contains(copy _1, const "example") -> [bb1];
    }

    bb1: {
        return;
    }
}
