baml_language/crates/baml_tests/snapshots/compiles/testset_with_setup/baml_tests__compiles__testset_with_setup__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.$init_test_28(registry: testing.TestCollector) -> ? throws never {
  { : null
    registry.register_test_set("with shared setup", (testset: testing.TestCollector) -> void { ... }, null) : void
      (testset: testing.TestCollector) -> void { ... } : (testset: testing.TestCollector) -> void throws unknown
        {
          let base_url = "https://api.examp..."
          let timeout = 5000
          testset.register_test("uses setup vars", () -> { ... }, null)
          testset.register_test("also uses setup", () -> { ... }, null)
          null
        }
    null : null
  }
}
lambda user.$init_test_28 {
}
lambda user.$init_test_28 {
}
lambda user.$init_test_28 {
}
