baml_language/crates/baml_tests/snapshots/compiles/testset_with_setup/baml_tests__compiles__testset_with_setup__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 22233
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
