baml_language/crates/baml_tests/snapshots/compiles/testset_with_setup/baml_tests__compiles__testset_with_setup__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init_test() -> null {
    load_var ?1
    call ?
    pop 1
    load_const ?
    return
}

function user.$init_test_25(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "with shared setup"
    load_const ?
    make_closure .<lambda($init_test_25, 0)>
    load_const null
    call testing.TestCollector.register_test_set
    pop 1
    load_const null
    return
}
